--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,19 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+link.txt
+userandrole.sql
+slick-1.8.1.zip
+rimiscreation06082020.rar
+rimiscreation.sql
+rimiscreation.rar
+rimiscdb_from_server_with_opencart_data.sql
+Rimis's Creations checkout.html
+rimi3.zip
+remiscreations17082020.sql
+remiscreations14082020.sql
+remiscreations12082020.sql
+remiscreations06082020.sql
+Picture details.pdf
+Picture details 2.pdf
+menupermissions.sql
