--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ remiscreations06082020.sql
 Picture details.pdf
 Picture details 2.pdf
 menupermissions.sql
+jquery-ui-1.12.1.zip
+jquery-ui-themes-1.12.1.zip
